--- a/src/input.css
+++ b/src/input.css
@@ -3,5 +3,10 @@
 @tailwind utilities;
 
 .square{
-    @apply p-4 border-blue-800 text-xl font-bold hover:text-yellow-300 border-yellow-300 ;
+    @apply border-blue-800 text-xl font-bold hover:text-yellow-300 border-yellow-300 h-16 w-16;
+}
+
+.reset{
+    @apply bg-yellow-300 border border-yellow-500 hover:bg-yellow-400 active:bg-yellow-500
+    w-16 h-auto left-1/3 relative text-black rounded-md text-center p-1 mt-10 font-bold; 
 }
