--- a/src/input.css
+++ b/src/input.css
@@ -8,5 +8,5 @@
 
 .reset{
     @apply bg-yellow-300 border border-yellow-500 hover:bg-yellow-400 active:bg-yellow-500
-    w-16 h-auto left-1/3 relative text-black rounded-md text-center p-1 mt-10 font-bold; 
+    w-16 h-auto text-black rounded-md text-center p-1 mt-6 font-bold self-center; 
 }
