reverted to js insteam of ts

--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .square{
-    @apply border-blue-800 text-xl font-bold hover:text-yellow-300 border-yellow-300 h-16 w-16;
+    @apply  text-xl font-bold hover:text-yellow-300 border-yellow-300 h-16 w-16 transition-colors duration-200 ;
 }
 
 .reset{
