--- a/output.css
+++ b/output.css
@@ -547,12 +547,12 @@ video {
   }
 }
 
-.mt-32 {
-  margin-top: 8rem;
-}
-
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
 }
 
 .flex {
@@ -561,10 +561,6 @@ video {
 
 .grid {
   display: grid;
-}
-
-.h-20 {
-  height: 5rem;
 }
 
 .h-16 {
@@ -630,6 +626,10 @@ video {
   font-weight: 700;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -648,12 +648,14 @@ video {
 .square {
   height: 4rem;
   width: 4rem;
-  border-color: rgb(30 64 175 / var(--tw-border-opacity));
   --tw-border-opacity: 1;
   border-color: rgb(253 224 71 / var(--tw-border-opacity));
   font-size: 1.25rem;
   line-height: 1.75rem;
   font-weight: 700;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 200ms;
 }
 
 .square:hover {
